<resources>
    <string name="accept">Accept</string>
    <string name="create_calendar_message">Allow Ad to create a calendar event?</string>
    <string name="create_calendar_title">Create calendar event</string>
    <string name="debug_menu_ad_information">Ad Information</string>
    <string name="debug_menu_creative_preview">Creative Preview</string>
    <string name="debug_menu_title">Select a Debug Mode</string>
    <string name="debug_menu_troubleshooting">Troubleshooting</string>
    <string name="decline">Decline</string>
    <string name="store_picture_message">Allow Ad to store image in Picture gallery?</string>
    <string name="store_picture_title">Save image</string>
    <string name="action_add_custom_settings">Custom settings</string>
    <string name="action_add_ev3_settings">EV3 Settings</string>
    <string name="action_copy_robot_settings">Make a copy</string>
    <string name="action_export_robot_settings_to_file">Export to a file</string>
    <string name="action_import_robot_settings_from_file">Import from a file</string>
    <string name="action_send_robot_settings">Send to</string>
    <string name="action_settings">Settings</string>
    <string name="add">Add</string>
    <string name="allow_spectators">Allow spectators</string>
    <string name="app_name">RoboCam</string>
    <string name="app_settings">Application settings</string>
    <string name="bluetooth_is_not_supported">Bluetooth is not supported.</string>
    <string name="brake">Brake</string>
    <string name="callsign">Callsign</string>
    <string name="callsign_response_settings">Callsign/Response</string>
    <string name="camera">Camera</string>
    <string name="camera_facing_back">Back-facing</string>
    <string name="camera_facing_external">External</string>
    <string name="camera_facing_front">Front-facing</string>
    <string name="cancel">Cancel</string>
    <string name="cannot_delete_current_settings_file">Cannot delete current settings</string>
    <string name="cannot_delete_settings_file">Could not delete settings</string>
    <string name="cannot_init_camera">Cannot initialize the camera.</string>
    <string name="coefficient">Coefficient</string>
    <string name="connect_to_robot">Connect to robot</string>
    <string name="current_robot_settings">Current robot settings</string>
    <string name="current_robot_settings_have_changed">Current settings have changed</string>
    <string name="custom_driver_desc">Custom</string>
    <string name="dec_x">Horizontal decrement</string>
    <string name="dec_x_desc">The value that changes a power and an angle per time. Must be 0-200</string>
    <string name="dec_y">Vertical decrement</string>
    <string name="dec_y_desc">The value that changes a power and an angle per time. Must be 0-200</string>
    <string name="delete">Delete</string>
    <string name="done">Done</string>
    <string name="down_keys">Down keys</string>
    <string name="driver_name">Driver name</string>
    <string name="driver_password">Driver password</string>
    <string name="enter_your_username">Enter your username.</string>
    <string name="error">Error</string>
    <string name="error_local_controls_have_been_activated">Local controls have been activated</string>
    <string name="error_only_back_facing_camera_supported">Android 2.2 supports only the first back-facing camera on the device.</string>
    <string name="error_poor_connection_quality">Poor connection quality.</string>
    <string name="error_security_settings_have_been_changed">Security settings have been changed.</string>
    <string name="error_server_has_been_turned_off">The server has been turned off.</string>
    <string name="error_while_copying_settings_xml">Error while copying the settings. %s</string>
    <string name="error_while_creating_default_ev3_settings_file">Error while creating default EV3 settings</string>
    <string name="error_while_creating_settings_xml">Error while creating settings. %s</string>
    <string name="error_while_exporting_settings_xml">Error while exporting settings. %s</string>
    <string name="error_while_opening_settings">Error while opening settings. %s</string>
    <string name="error_while_opening_settings_file">Error while opening the settings file %s. %s</string>
    <string name="ev3_bonded_devices_not_found">Bonded devices not found. Pair EV3 via Bluetooth first.</string>
    <string name="ev3_connection_error">Connection failed. Check EV3 Bluetooth is turned on.</string>
    <string name="ev3_error_cannot_read_input_port_list">Cannot read an input port list from EV3 brick.</string>
    <string name="ev3_error_cannot_write_supporting_program">Cannot write supporting program.</string>
    <string name="ev3_error_could_not_start_supporting_program">Could not start supporting program.</string>
    <string name="ev3_error_joysticks_have_different_types_for_same_port">Joysticks have different types for the port %s.</string>
    <string name="ev3_error_motor_not_connected">Motor is not connected to the port %s.</string>
    <string name="ev3_error_no_reply_while_reading_input_port_values">EV3 didn\'t reply while reading input port values.</string>
    <string name="ev3_error_strange_reply">EV3 sent strange reply.</string>
    <string name="ev3_error_unknown_device">Can\'t check the device. Is it really EV3?</string>
    <string name="ev3_is_connecting">Connecting to EV3...</string>
    <string name="ev3_is_disconnected">EV3 is not connected</string>
    <string name="ev3_researcher">EV3 Researcher</string>
    <string name="ev3_researcher_desc">A simple wheeled robot with a controlled phone holder.</string>
    <string name="general_information">General information</string>
    <string name="go_to_the_controllers">Go to the controllers...</string>
    <string name="hide">Hide</string>
    <string name="hide_joysticks_while_using_keyboard">Hide joysticks while using a keyboard</string>
    <string name="inc_x">Horizontal increment</string>
    <string name="inc_x_desc">The value that changes a power and an angle per time. Must be 0-200</string>
    <string name="inc_y">Vertical increment</string>
    <string name="inc_y_desc">The value that changes a power and an angle per time. Must be 0-200</string>
    <string name="invalid_mailbox_name">Invalid mailbox name. The name must not be \"x\", \"y\", \"w\", \"z\", \"a\", \"b\", \"c\" and \"d\".</string>
    <string name="invert">Invert</string>
    <string name="joystick1">Joystick 1</string>
    <string name="joystick1_ports">Ports of the joystick 1</string>
    <string name="joystick2">Joystick 2</string>
    <string name="joystick2_ports">Ports of the joystick 2</string>
    <string name="joystick3">Joystick 3</string>
    <string name="joystick3_ports">Ports of the joystick 3</string>
    <string name="joystick4">Joystick 4</string>
    <string name="joystick4_ports">Ports of the joystick 4</string>
    <string name="joystick_behavior1">End of touching (for a horizontal axis)</string>
    <string name="joystick_behavior2">End of touching (for a vertical axis)</string>
    <string name="joystick_behavior_hold_position">Hold a position</string>
    <string name="joystick_behavior_return_to_zero">Return to zero</string>
    <string name="joystick_brake">Brake</string>
    <string name="joystick_coefficient">Coefficient</string>
    <string name="joystick_group_axis">Joystick axis</string>
    <string name="joystick_group_horizontal">Horizontal</string>
    <string name="joystick_group_left">Left</string>
    <string name="joystick_group_motor">Motor</string>
    <string name="joystick_group_right">Right</string>
    <string name="joystick_group_vertical">Vertical</string>
    <string name="joystick_invert">Invert</string>
    <string name="joystick_layer">EV3 brick</string>
    <string name="joystick_n_port_n">Joystick %d port %s</string>
    <string name="joystick_port_number">Port number</string>
    <string name="joystick_power">Power</string>
    <string name="joystick_shape">Shape</string>
    <string name="joystick_shape_arrows">Arrows</string>
    <string name="joystick_shape_circular">Circular</string>
    <string name="joystick_shape_horizontal">Horizontal</string>
    <string name="joystick_shape_horizontal_arrows">Horizontal arrows</string>
    <string name="joystick_shape_invisible">Invisible</string>
    <string name="joystick_shape_quadratic">Quadratic</string>
    <string name="joystick_shape_vertical">Vertical</string>
    <string name="joystick_shape_vertical_arrows">Vertical arrows</string>
    <string name="joystick_type">Type</string>
    <string name="joystick_type_angle">Motor angle</string>
    <string name="joystick_type_cv">Changeable value</string>
    <string name="joystick_type_independent_motors">Independent motors</string>
    <string name="joystick_type_mailbox">Mailbox</string>
    <string name="joystick_type_power">Motor power</string>
    <string name="joystick_type_steering">Steering 1 (can move like a car)</string>
    <string name="joystick_type_steering_progressive">Steering 2 (can spin on the spot)</string>
    <string name="joysticks">Joysticks</string>
    <string name="jpeg_quality">JPEG quality</string>
    <string name="key_group">Keyboard</string>
    <string name="keyboard_group_axis">Keys</string>
    <string name="keygroup_active">Active</string>
    <string name="keygroup_behavior1">End of pressing (for left/right keys)</string>
    <string name="keygroup_behavior2">End of pressing (for up/down keys)</string>
    <string name="keygroup_has_been_added">Key group has been added</string>
    <string name="keygroup_horizontal">Left/right</string>
    <string name="keygroup_n">Key group %s</string>
    <string name="keygroup_n_port_n">Key group %d port %s</string>
    <string name="keygroup_ports">Ports of the key group %d</string>
    <string name="keygroup_type_steering">Steering</string>
    <string name="keygroup_vertical">Up/down</string>
    <string name="keygroup_was_deleted">The key group was deleted</string>
    <string name="keys">Keys</string>
    <string name="left_keys">Left keys</string>
    <string name="local_web_path">def</string>
    <string name="mailbox">Mailbox name</string>
    <string name="JADX_DEOBF_697">Maxmize joysticks</string>
    <string name="nothing_selected">Nothing selected</string>
    <string name="output_port">Output port</string>
    <string name="port">Port</string>
    <string name="port_has_been_added">Port has been added</string>
    <string name="port_was_deleted">The port was deleted</string>
    <string name="power">Power</string>
    <string name="pref_title_server">Server</string>
    <string name="pref_totle_robot">Robot</string>
    <string name="previewSize">Preview size</string>
    <string name="request_camera_permission">RoboCam needs camera permission.</string>
    <string name="request_write_external_storage_permission">RoboCam needs external storage permission.</string>
    <string name="response">Response</string>
    <string name="right_keys">Right keys</string>
    <string name="robot_bonded_devices_not_found">Bonded devices not found. Pair a robot via Bluetooth first.</string>
    <string name="robot_connection_error">Connection failed. Check the robot Bluetooth is turned on.</string>
    <string name="robot_description">Description</string>
    <string name="robot_error_internal_error">An internal robot error.</string>
    <string name="robot_name">Bot name</string>
    <string name="save">Save</string>
    <string name="security">Security</string>
    <string name="show_debug_info">Show debug info</string>
    <string name="spectator_name">Spectator name</string>
    <string name="spectator_password">Spectator password</string>
    <string name="use_local_controls">Use local controls</string>
    <string name="use_render_script">Use RenderScript to process images</string>
    <string name="visibility">Visibility</string>
</resources>